[metadata]
name = drf-auto-api
version = 0.1.0
description = Automatização e Customização de API com Django Rest Framework
author = LeandroJataí
author_email = leandroroberto.br@gmail.com
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 4 - Beta
  Environment :: Web Environment
  Framework :: Django
  Framework :: Django :: 2.2
  Framework :: Django :: 4.0
  Framework :: Django :: 4.1
  Framework :: Django :: 4.2
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Topic :: Internet :: WWW/HTTP
project_urls =
  Documentation = https://github.com/LeandroJatai/drf-auto-api
  Source = https://github.com/LeandroJatai/drf-auto-api
  Tracker = https://github.com/LeandroJatai/drf-auto-api/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
  django>=2.2
  djangorestframework>=3.12.4
  django-filter>=2.4
zip_safe = False

[egg_info]
tag_build =
tag_date = 0
